--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "test": "mocha tests/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,8 @@
   "dependencies": {
     "chromedriver": "^131.0.1",
     "selenium-webdriver": "^4.27.0"
+  },
+  "devDependencies": {
+    "mocha": "^11.0.1"
   }
 }
